# GigaSafe-Evacuation-Route-Planner

./: .gitignore  README.md  package-lock.json  rebuild.bat
backend/: CMakeLists.txt  Graph.cpp  Graph.h  firstfloor.cpp  firstfloor.h  floor2a.cpp  floor2a.h  groundfloor.cpp  groundfloor.h  lowergroundfloor.cpp  lowergroundfloor.h  main.cpp  mezzaninefloor.cpp  mezzaninefloor.h  secondfloor.cpp  secondfloor.h
backend/algorithms/: AStar.cpp  AStar.h  BFS.cpp  BFS.h  DFS.cpp  DFS.h  Dijkstra.cpp  Dijkstra.h
backend/datastructures/: HashMap.cpp  HashMap.h
backend/visualization/: visualizer.cpp  visualizer.h
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: backendApi.ts
frontend/src/components/: AlgorithmControls.css  AlgorithmControls.tsx  FloorSelector.css  FloorSelector.tsx  Footer.css  Footer.tsx  GraphVisualization.css  GraphVisualization.tsx  Header.css  Header.tsx  PlannerMapViewer.css  PlannerMapViewer.tsx  VisualizationStatus.css  VisualizationStatus.tsx
frontend/src/pages/: HashMap.css  HashMapPage.tsx  HomePage.css  HomePage.tsx  PlannerPage.css  PlannerPage.tsx  VisualizationPage.css  VisualizationPage.tsx
frontend/src/types/: index.ts
integration/: api-server.js  backend-wrapper.cpp  package-lock.json  package.json
